Fixed jacoco not generate jacoco.exec