@@ -37,7 +37,7 @@
 		</repository>
 		<repository>
 			<id>Sonar (snapshots)</id>
-			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+			<url>http://oss.sonatype.org/content/repositories/snapshots/</url>
 		</repository>
 	</repositories>
 
@@ -88,6 +88,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>org.jacoco.core</artifactId>
+			<version>0.7.0.201403182114</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>1.9.5</version>
@@ -133,7 +139,6 @@
 					<systemPropertyVariables>
 						<glassfish_home>${glassfish4.home.default}</glassfish_home>
 					</systemPropertyVariables>
-					<argLine>-Xverify:none</argLine>
 				</configuration>
 			</plugin>
 
